渲染公共部分模板

--- a/public/admin/password-reset.html
+++ b/public/admin/password-reset.html
@@ -107,6 +107,8 @@
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/vendors/art-template/template-web.js"></script>
     <script src="../assets/js/password-reset.js"></script>
+    <script src="../assets/js/common.js"></script>
+
     <script>
         NProgress.done()
     </script>
