--- a/public/admin/comments.html
+++ b/public/admin/comments.html
@@ -98,6 +98,8 @@
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/vendors/art-template/template-web.js"></script>
     <script src="../assets/js/comments.js"></script>
+    <script src="../assets/js/common.js"></script>
+
 
     <script>
         NProgress.done()
