--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -95,30 +95,13 @@
     <script src="../assets/vendors/jquery/jquery.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/vendors/art-template/template-web.js"></script>
+    <script src="../assets/js/common.js"></script>
     <script src="../assets/js/index.js"></script>
+
     <script>
         NProgress.done()
     </script>
-    <script>
-        $("#logout").on('click', function() {
-            let isComfirm = confirm('确定要退出码');
-            if (isComfirm) {
-                $.ajax({
-                    type: "POST",
-                    url: "/logout",
 
-                    success: function(response) {
-                        location.href = 'login.html'
-
-                    },
-                    error: function() {
-
-                    }
-                });
-            }
-
-        })
-    </script>
 
 </body>
 
