--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -126,6 +126,8 @@
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/vendors/art-template/template-web.js"></script>
     <script src="../assets/js/postadd.js"></script>
+    <script src="../assets/js/common.js"></script>
+
     <script>
         NProgress.done()
     </script>
