--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -111,6 +111,8 @@
     <script src="../assets/vendors/jquery/jquery.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/vendors/art-template/template-web.js"></script>
+    <script src="../assets/js/common.js"></script>
+
     <script type="text/html" id="postTpl">
         {{each records}}
         <tr>
